Project

General

Profile

Actions

Bug #16909

closed

Stopping an MDS rank does not stop standby-replays for that rank

Added by John Spray over 7 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
multimds
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Run vstart with MDS=2 and -s flag
Set max_mds to 2
See that you get two active daemons and two standby-replays
Set max_mds to 1
do ceph mds stop 1
See that one of the active daemons goes back to standby, but we still have a standby-replay for the rank that no longer exists

Actions #1

Updated by John Spray over 7 years ago

  • Status changed from New to In Progress
  • Assignee set to John Spray
Actions #2

Updated by John Spray over 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Greg Farnum over 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions #4

Updated by Patrick Donnelly about 5 years ago

  • Category deleted (90)
  • Labels (FS) multimds added
Actions

Also available in: Atom PDF